<resources>
    <string name="app_name">Quizzie</string>
    <string name="login">Login</string>
    <string name="new_user">New user</string>
    <string name="top_users">Top users</string>
    <string name="next">Next</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="difficulty">Difficulty</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="logo">Logo</string>
    <string name="start">Start</string>
    <string name="already_an_account_sign_in">Already an account? Sign in!</string>
    <string-array name="category_spinner">
        <item>General Knowledge</item>
        <item>Film</item>
        <item>Music</item>
        <item>Video Games</item>
        <item>Sports</item>
        <item>Animals</item>
    </string-array>
    <string-array name="difficulty_spinner">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_optional">Name</string>
    <string name="register_now">Register now!</string>
    <string name="start_game">Start game</string>
    <string name="hello_message">Hey there&#160;</string>
    <string name="Ex">!</string>
    <string name="your_karma">Your karma:&#160;</string>
    <string name="back_to_home">Back to home</string>
    <string name="you_are_playing_as_guest_karma_will_not_be_saved">You are playing as guest, karma will not be saved! Register now!</string>
    <string name="Complete_score">Your score this game:</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="karma">Karma</string>
    <string name="AllUserKarma">Total karma earned by all users:&#160;</string>
    <string name="reward_picture">Reward Picture</string>
    <string name="last_questions">Last time questions</string>
    <string name="_5">5</string>
    <string name="rules">Info</string>
    <string name="info">
        This is a simple Trivia app where you can create an account and play Trivia games.\n\n
        The app saves karma earned in your account and displays the best users of the app.\n\n
        Easy questions earn you 1 karma point, medium questions 2 points and hard questions 3 points.\n\n
        The last trivia you played is stored. This way you can play them again if you do not have internet acces.
    </string>
</resources>
